test/types/scalar/tmacd/fatal.good
fatal.chpl:5: error: unresolved call 'int(64)(real(64))'
fatal.chpl:5: note: because no functions named int(64) found in scope
